Fix the datatable styles which break the layout
Removed the word-wrap prop from th/td tag.

--- a/solidity/dashboard/src/css/datatable.less
+++ b/solidity/dashboard/src/css/datatable.less
@@ -36,7 +36,6 @@ table {
     th, td {
         padding: 0 0.6rem;
         text-overflow: ellipsis; 
-        word-wrap: break-word;
     }
 
     td {
